--- a/logos.html
+++ b/logos.html
@@ -9,13 +9,75 @@
             width: 200px;
             height: 200px;
         }
+
+        @keyframes rotating {
+            from {
+                transform: rotate(0)
+            }
+
+            to {
+                transform: rotate(360deg)
+            }
+        }
+
+        .rotate {
+            animation: rotating 1s ease-in-out infinite;
+        }
     </style>
+    <script src="./scripts/mylogo.js"></script>
 </head>
+
 <body>
     <img src="./images/logo.svg" />
     <img src="./images/logo_red.svg" />
     <img src="./images/logo_white.svg" style="background: #dedede;" />
     <img src="./images/logo_white_blue.svg" />
     <img src="./images/logo_white_blue_circle.svg" />
+
+    <hr />
+    <script>
+        document.writeln(mylogo({
+            size: 100,
+            background: "#ffffff",
+            colors: ["#DF2025", "#4BB847", "#347DC2"],
+        }));
+        document.writeln(mylogo({
+            size: 200,
+            background: "#ffffff",
+            colors: "#ff0000",
+        }));
+        document.writeln(mylogo({
+            size: 300,
+            background: "#075ac5",
+            colors: "#ffffff",
+        }));
+        document.writeln(mylogo({
+            size: 300,
+            background: "#075ac5",
+            colors: "#ffffff",
+            circle: true,
+        }));
+    </script>
+
+
+    <div style="display:inline-block;" class="rotate">
+        <script>
+            document.writeln(mylogo({
+                size: 300,
+                background: "#075ac5",
+                colors: "#ffffff",
+                circle: true,
+            }));
+        </script>
+    </div>
+    <div style="display:inline-block;" class="rotate">
+        <script>
+            document.writeln(mylogo({
+                size: 300,
+                colors: ["#ff0000", "#0000ff", "#00ff00"],
+            }));
+        </script>
+    </div>
 </body>
+
 </html>
