--- a/logos.html
+++ b/logos.html
@@ -28,6 +28,12 @@
 </head>
 
 <body>
+    <img src="./images/logo.png" />
+    <img src="./images/logo_red.png" />
+    <img src="./images/logo_white.png" style="background: #dedede" />
+    <img src="./images/logo_bg_white.png" />
+
+    <hr />
     <img src="./images/logo.svg" />
     <img src="./images/logo_red.svg" />
     <img src="./images/logo_white.svg" style="background: #dedede;" />
