--- a/logos.html
+++ b/logos.html
@@ -6,8 +6,8 @@
     <title>My Logos</title>
     <style>
         img {
-            width: 200px;
-            height: 200px;
+            width: 50px;
+            height: 50px;
         }
 
         @keyframes rotating {
@@ -28,62 +28,79 @@
 </head>
 
 <body>
-    <img src="./images/logo.png" />
-    <img src="./images/logo_red.png" />
-    <img src="./images/logo_white.png" style="background: #dedede" />
-    <img src="./images/logo_bg_white.png" />
+    <fieldset>
+        <legend>PNG</legend>
+        <div>
+            <img src="./images/logo.png" />
+            <img src="./images/logo_red.png" />
+            <img src="./images/logo_white.png" style="background: #dedede" />
+            <img src="./images/logo_bg_white.png" />
 
-    <hr />
-    <img src="./images/logo.svg" />
-    <img src="./images/logo_red.svg" />
-    <img src="./images/logo_white.svg" style="background: #dedede;" />
-    <img src="./images/logo_white_blue.svg" />
-    <img src="./images/logo_white_blue_circle.svg" />
+        </div>
+    </fieldset>
 
-    <hr />
-    <script>
-        document.writeln(mylogo({
-            size: 100,
-            background: "#ffffff",
-            colors: ["#DF2025", "#4BB847", "#347DC2"],
-        }));
-        document.writeln(mylogo({
-            size: 200,
-            background: "#ffffff",
-            colors: "#ff0000",
-        }));
-        document.writeln(mylogo({
-            size: 300,
-            background: "#075ac5",
-            colors: "#ffffff",
-        }));
-        document.writeln(mylogo({
-            size: 300,
-            background: "#075ac5",
-            colors: "#ffffff",
-            circle: true,
-        }));
-    </script>
+    <fieldset>
+        <legend>SVG</legend>
+        <div>
+            <img src="./images/logo.svg" />
+            <img src="./images/logo_red.svg" />
+            <img src="./images/logo_white.svg" style="background: #dedede;" />
+            <img src="./images/logo_white_blue.svg" />
+            <img src="./images/logo_white_blue_circle.svg" />
+        </div>
+    </fieldset>
 
 
-    <div style="display:inline-block;" class="rotate">
-        <script>
-            document.writeln(mylogo({
-                size: 300,
-                background: "#075ac5",
-                colors: "#ffffff",
-                circle: true,
-            }));
-        </script>
-    </div>
-    <div style="display:inline-block;" class="rotate">
-        <script>
-            document.writeln(mylogo({
-                size: 300,
-                colors: ["#ff0000", "#0000ff", "#00ff00"],
-            }));
-        </script>
-    </div>
+    <fieldset>
+        <legend>Script</legend>
+        <div>
+            <script>
+                document.writeln(mylogo({
+                    size: 50,
+                    background: "#ffffff",
+                    colors: ["#DF2025", "#4BB847", "#347DC2"],
+                }));
+                document.writeln(mylogo({
+                    size: 50,
+                    background: "#ffffff",
+                    colors: "#ff0000",
+                }));
+                document.writeln(mylogo({
+                    size: 50,
+                    background: "#075ac5",
+                    colors: "#ffffff",
+                }));
+                document.writeln(mylogo({
+                    size: 50,
+                    background: "#075ac5",
+                    colors: "#ffffff",
+                    circle: true,
+                }));
+            </script>
+        </div>
+        <div style="display:inline-block;" class="rotate">
+            <script>
+                document.writeln(mylogo({
+                    size: 50,
+                    background: "#075ac5",
+                    colors: "#ffffff",
+                    circle: true,
+                }));
+            </script>
+        </div>
+        <div style="display:inline-block;" class="rotate">
+            <script>
+                document.writeln(mylogo({
+                    size: 50,
+                    colors: ["#ff0000", "#0000ff", "#00ff00"],
+                }));
+            </script>
+        </div>
+    </fieldset>
+
+
+
+
 </body>
 
 </html>
