--- a/logos.html
+++ b/logos.html
@@ -47,6 +47,7 @@
             <img src="./images/logo_white.svg" style="background: #dedede;" />
             <img src="./images/logo_white_blue.svg" />
             <img src="./images/logo_white_blue_circle.svg" />
+            <img src="./images/logo_fill.svg" />
         </div>
     </fieldset>
 
