--- a/index.html
+++ b/index.html
@@ -21,20 +21,14 @@
     <h1 class="text-info">^_^</h1>
     <h2>Sorry! The page you were looking for could not be found.</h2>
 
-    <a role="button" class="btn btn-outline-light" href="http://bndy.net">Go Back</a>
+    <a role="button" class="btn btn-outline-light" href="http://bndy.net">Go Home</a>
 
     <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a class="nav-link" href="http://bndy.net">My Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="http://wiki.bndy.net">My Wiki</a>
+            <a class="nav-link" href="logo.html">My Logo</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="https://github.com/bndynet">My GitHub</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="mailto:zb@bndy.net">Contact me</a>
         </li>
     </ul>
 
